--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {    
-	"start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
+  "scripts": {
+    "start": "concurrently \"npm run tsc:w\" \"node server.js\" ",
     "lite": "lite-server",
+	"serve": "serve",
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
@@ -29,6 +30,7 @@
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "serve": "^3.4.1",
     "systemjs": "0.19.39",
     "zone.js": "^0.6.25"
   },
