--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "concurrently": "^3.1.0",
     "typescript": "^2.0.3",
     "typings": "^1.4.0"
+  },
+  "engines": {
+    "node": ">= 5.0.0",
+    "npm": ">= 3.0.0"
   }
 }
