--- a/tsconfigFrontend.json
+++ b/tsconfigFrontend.json
@@ -3,11 +3,12 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "frontend/app/transpiled-js",
+    "outDir": "frontend/app/build/",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false
-  }
+  },
+  "exclude": [ "node_modules", "backend"]
 }
