--- a/tsconfigBackend.json
+++ b/tsconfigBackend.json
@@ -3,7 +3,7 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "src/backend",
+    "outDir": "build/backend",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
