Servertypescript now enabled, still server-client-errors

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-frontend/app/transpiled-js
+frontend/app/build
+backend/build
 
 typings/
 
