config stuff added

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,5 +10,6 @@
     "removeComments": false,
     "noImplicitAny": false
   },
-  "exclude": [ "node_modules"]
+  "exclude": [ "node_modules"],
+  "include": ["../typings"]
 }
