--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,5 +11,5 @@
     "noImplicitAny": false
   },
   "exclude": [ "node_modules"],
-  "include": ["../typings"]
+  "include": ["../typings", "./"]
 }
